Mon Sep 15 10:29:25 2014  Natalie Weizenbaum  <nweiz@google.com>

	* ext/pathname/lib/pathname.rb (SAME_PATHS):
	  Pathname#relative_path_from uses String#casecmp to compare strings
	  on case-insensitive filesystem platforms (e.g., Windows). This can
	  return nil for strings with different encodings, and the code
	  previously assumed that it always returned a Fixnum.  [Fix GH-713]

Mon Sep 15 09:43:18 2014  Sho Hashimoto  <sho.hsmt@gmail.com>

	* ext/fiddle/lib/fiddle/import.rb (Fiddle::Importer#sizeof): fix typo,
	  SIZEOF_LONG_LON.  [Fix GH-714]

Mon Sep 15 08:13:40 2014  Matthew Draper  <matthew@trebex.net>

	* sprintf.c (rb_str_format): rational 'f' format works for more
	  values.  [fix GH-717]

Sun Sep 14 16:57:27 2014  Eric Wong  <e@80x24.org>

	* template/vm.inc.tmpl: "insns.c" => "insns.def"
	* tool/instruction.rb: typo fix

Sun Sep 14 12:29:52 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_tracer.rb: fixed testcase for rubygems update.

Sun Sep 14 12:29:02 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rubygems:  Update to RubyGems 2.4.1 master(713ab65)
	  Complete history at:
	  https://github.com/rubygems/rubygems/blob/master/History.txt#L3-L216

	* test/rubygems:  ditto.

Sun Sep 14 11:03:24 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: update version
	* ext/psych/psych.gemspec: ditto

Sun Sep 14 08:43:37 2014  Eric Wong  <e@80x24.org>

	* ccan/container_of/container_of.h (container_of_or_null): added
	  [ccan 7ec5b8e06b2fd5fa98b1fcde1158c286d2d429d8] (David Gibson)

Sun Sep 14 08:41:44 2014  Eric Wong  <e@80x24.org>

	* ccan/list/list.h (list_del_init, list_node_init): new functions
	  for multiple list_del() calls
	  [ccan ec8654d94d3c5c47aa5f82698f7e8048c79765b1] (Rusty Russell)

Sat Sep 13 22:19:26 2014  Bernard Potocki  <bernard.potocki@imanel.org>

	* hash.c (rb_hash_aset): fix misleading example which may suggest
	  that Hash.store will return self instead of value - Hash#store